upload all files

--- a/products/passivation/blue-passivation-on-zinc.html
+++ b/products/passivation/blue-passivation-on-zinc.html
@@ -334,7 +334,7 @@
   <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">ส่วนที่ 1: หลักการทำงานและความสำคัญ</h2>
   <div class="content">
     <p data-i18n-key="principle_p1">
-      หลังชุบสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มีโครเมียมไตรวาเลนต์ (Cr³⁺) เกิดฟิล์มโครเมียมออกไซด์บาง ๆ เคลือบบนผิวสังกะสี เพิ่มความทนทานการกัดกร่อน ขณะคงโทนฟ้าอมเงินที่สะอาดทันสมัย
+      หลังชุบซิงค์หรือสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มีโครเมียมไตรวาเลนต์ (Cr³⁺) เกิดฟิล์มโครเมียมออกไซด์บาง ๆ เคลือบบนผิวซิงค์หรือสังกะสี เพิ่มความทนทานการกัดกร่อน ขณะคงโทนฟ้าอมเงินที่สะอาดทันสมัย
     </p>
     <ul>
       <li data-i18n-key="importance_env">ปลอดภัยกว่า Cr⁶⁺ สอดคล้อง RoHS/REACH ลดความเสี่ยงต่อผู้ปฏิบัติงานและสิ่งแวดล้อม</li>
@@ -346,10 +346,10 @@
 
 <!-- Process -->
 <section id="process" class="reveal section-block" aria-labelledby="process-h">
-  <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: วิธีการใช้งาน (หลังการชุบสังกะสี)</h2>
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: วิธีการใช้งาน (หลังการชุบซิงค์หรือสังกะสี)</h2>
   <div class="content">
     <ul>
-      <li data-i18n-key="proc_0">ชิ้นงานผ่านการชุบสังกะสี แนะนำความหนา ≥ 8 µm</li>
+      <li data-i18n-key="proc_0">ชิ้นงานผ่านการชุบซิงค์หรือสังกะสี แนะนำความหนา ≥ 8 µm</li>
       <li data-i18n-key="proc_1">ล้างน้ำสะอาด 2 ครั้ง</li>
       <li data-i18n-key="proc_2">จุ่มกรดดินประสิว (HNO₃) 0.5% v/v นาน 2–5 วินาที เพื่อเปิดผิว</li>
       <li data-i18n-key="proc_2_note">ผสม 100 ลิตร ใช้กรดดินประสิว 0.5 ลิตร เติมน้ำจนครบ</li>
@@ -411,7 +411,7 @@
     <ul>
       <li data-i18n-key="control_ph">ควบคุม pH ระหว่าง 1.8–2.2 ปรับด้วยกรดไนตริกเข้มข้น 50%</li>
       <li data-i18n-key="control_rinse">ควบคุมการล้างระหว่างขั้นตอนให้เหมาะสม เพื่อลดการปนเปื้อนคลอไรด์</li>
-      <li data-i18n-key="control_zinc">รักษาความหนาสังกะสีให้สม่ำเสมอ เพื่อความคงทนและสีที่เสถียร</li>
+      <li data-i18n-key="control_zinc">รักษาความหนาซิงค์หรือสังกะสีให้สม่ำเสมอ เพื่อความคงทนและสีที่เสถียร</li>
     </ul>
   </div>
 </section>
@@ -432,12 +432,12 @@
       <li class="lead" data-i18n-key="ts_whitepowder_fix">แนวทางแก้: ปรับลดความเข้มข้น ลดเวลาในการจุ่ม และเพิ่มคุณภาพ/จำนวนขั้นตอนล้าง</li>
 
       <li data-i18n-key="ts_patchy_h">ฟิล์มไม่สม่ำเสมอหรือมีรอยด่าง</li>
-      <li class="lead" data-i18n-key="ts_patchy_cause">สาเหตุ: ทำความสะอาดก่อนจุ่มไม่ดี ความหนาสังกะสีไม่สม่ำเสมอ หรืออุณหภูมิน้ำยาไม่นิ่ง</li>
-      <li class="lead" data-i18n-key="ts_patchy_fix">แนวทางแก้: ปรับปรุงการล้าง ตรวจสอบความหนาสังกะสี และคุมอุณหภูมิให้อยู่ช่วง</li>
+      <li class="lead" data-i18n-key="ts_patchy_cause">สาเหตุ: ทำความสะอาดก่อนจุ่มไม่ดี ความหนาซิงค์หรือสังกะสีไม่สม่ำเสมอ หรืออุณหภูมิน้ำยาไม่นิ่ง</li>
+      <li class="lead" data-i18n-key="ts_patchy_fix">แนวทางแก้: ปรับปรุงการล้าง ตรวจสอบความหนาซิงค์หรือสังกะสี และคุมอุณหภูมิให้อยู่ช่วง</li>
 
       <li data-i18n-key="ts_lowcorrosion_h">ความทนทานการกัดกร่อนต่ำ</li>
-      <li class="lead" data-i18n-key="ts_lowcorrosion_cause">สาเหตุ: pH ของน้ำยาผิดปกติ ความหนาสังกะสีบาง หรือการทำให้แห้งไม่สมบูรณ์</li>
-      <li class="lead" data-i18n-key="ts_lowcorrosion_fix">แนวทางแก้: ปรับ pH ให้อยู่ 1.8–2.2 เพิ่มความหนาสังกะสี และทำให้แห้งสนิทก่อนใช้งาน</li>
+      <li class="lead" data-i18n-key="ts_lowcorrosion_cause">สาเหตุ: pH ของน้ำยาผิดปกติ ความหนาซิงค์หรือสังกะสีบาง หรือการทำให้แห้งไม่สมบูรณ์</li>
+      <li class="lead" data-i18n-key="ts_lowcorrosion_fix">แนวทางแก้: ปรับ pH ให้อยู่ 1.8–2.2 เพิ่มความหนาซิงค์หรือสังกะสี และทำให้แห้งสนิทก่อนใช้งาน</li>
 
       <li data-i18n-key="ts_drop_h">สีดรอปหรือหม่นลง</li>
       <li class="lead" data-i18n-key="ts_drop_cause">สาเหตุ: จุ่มนานเกินจนฟิล์มหนาเกิน หรือความเข้มข้นน้ำยาสูงเกิน</li>
@@ -540,13 +540,13 @@
         feat_note:"*ผลลัพธ์ขึ้นกับความหนาซิงค์ สภาพผิว การล้าง และขั้นตอนการอบแห้ง",
 
        makeup_h: "ส่วนที่ 1: หลักการทำงานและความสำคัญ",
-      principle_p1: "หลังชุบสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มีโครเมียมไตรวาเลนต์ (Cr³⁺) เกิดฟิล์มโครเมียมออกไซด์บาง ๆ เคลือบบนผิวสังกะสี เพิ่มความทนทานการกัดกร่อน ขณะคงโทนฟ้าอมเงินที่สะอาดทันสมัย",
+      principle_p1: "หลังชุบซิงค์หรือสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มีโครเมียมไตรวาเลนต์ (Cr³⁺) เกิดฟิล์มโครเมียมออกไซด์บาง ๆ เคลือบบนผิวซิงค์หรือสังกะสี เพิ่มความทนทานการกัดกร่อน ขณะคงโทนฟ้าอมเงินที่สะอาดทันสมัย",
       importance_env: "ปลอดภัยกว่า Cr⁶⁺ สอดคล้อง RoHS/REACH ลดความเสี่ยงต่อผู้ปฏิบัติงานและสิ่งแวดล้อม",
       importance_perf: "ทนการพ่นละอองเกลือได้ดีเมื่อควบคุมพารามิเตอร์ถูกต้อง",
       importance_look: "ภาพลักษณ์สะอาด ทันสมัย เพิ่มคุณค่าชิ้นงาน",
 
-      process_h: "ส่วนที่ 2: วิธีการใช้งาน (หลังการชุบสังกะสี)",
-      proc_0: "ชิ้นงานผ่านการชุบสังกะสี แนะนำความหนา ≥ 8 µm",
+      process_h: "ส่วนที่ 2: วิธีการใช้งาน (หลังการชุบซิงค์หรือสังกะสี)",
+      proc_0: "ชิ้นงานผ่านการชุบซิงค์หรือสังกะสี แนะนำความหนา ≥ 8 µm",
       proc_1: "ล้างน้ำสะอาด 2 ครั้ง",
       proc_2: "จุ่มกรดดินประสิว (HNO₃) 0.5% v/v นาน 2–5 วินาที เพื่อเปิดผิว",
       proc_2_note: "ผสม 100 ลิตร ใช้กรดดินประสิว 0.5 ลิตร เติมน้ำจนครบ",
@@ -581,7 +581,7 @@
       control_h: "การควบคุมอ่างอย่างต่อเนื่อง",
       control_ph: "ควบคุม pH ระหว่าง 1.8–2.2 ปรับด้วยกรดไนตริกเข้มข้น 50%",
       control_rinse: "ควบคุมการล้างระหว่างขั้นตอนให้เหมาะสม เพื่อลดการปนเปื้อนคลอไรด์",
-      control_zinc: "รักษาความหนาสังกะสีให้สม่ำเสมอ เพื่อความคงทนและสีที่เสถียร",
+      control_zinc: "รักษาความหนาซิงค์หรือสังกะสีให้สม่ำเสมอ เพื่อความคงทนและสีที่เสถียร",
 
       anode_h: "การแก้ปัญหาเบื้องต้น",
       ts_yellow_h: "สีติดเหลือง",
@@ -592,11 +592,11 @@
       ts_whitepowder_cause: "สาเหตุที่พบบ่อย: น้ำยาเข้มข้นเกิน เวลาในการจุ่มนานเกิน หรือการล้างหลังจุ่มไม่เพียงพอ",
       ts_whitepowder_fix: "แนวทางแก้: ปรับลดความเข้มข้น ลดเวลาในการจุ่ม และเพิ่มคุณภาพ/จำนวนขั้นตอนล้าง",
       ts_patchy_h: "ฟิล์มไม่สม่ำเสมอหรือมีรอยด่าง",
-      ts_patchy_cause: "สาเหตุ: ทำความสะอาดก่อนจุ่มไม่ดี ความหนาสังกะสีไม่สม่ำเสมอ หรืออุณหภูมิน้ำยาไม่นิ่ง",
-      ts_patchy_fix: "แนวทางแก้: ปรับปรุงการล้าง ตรวจสอบความหนาสังกะสี และคุมอุณหภูมิให้อยู่ช่วง",
+      ts_patchy_cause: "สาเหตุ: ทำความสะอาดก่อนจุ่มไม่ดี ความหนาซิงค์หรือสังกะสีไม่สม่ำเสมอ หรืออุณหภูมิน้ำยาไม่นิ่ง",
+      ts_patchy_fix: "แนวทางแก้: ปรับปรุงการล้าง ตรวจสอบความหนาซิงค์หรือสังกะสี และคุมอุณหภูมิให้อยู่ช่วง",
       ts_lowcorrosion_h: "ความทนทานการกัดกร่อนต่ำ",
-      ts_lowcorrosion_cause: "สาเหตุ: pH ของน้ำยาผิดปกติ ความหนาสังกะสีบาง หรือการทำให้แห้งไม่สมบูรณ์",
-      ts_lowcorrosion_fix: "แนวทางแก้: ปรับ pH ให้อยู่ 1.8–2.2 เพิ่มความหนาสังกะสี และทำให้แห้งสนิทก่อนใช้งาน",
+      ts_lowcorrosion_cause: "สาเหตุ: pH ของน้ำยาผิดปกติ ความหนาซิงค์หรือสังกะสีบาง หรือการทำให้แห้งไม่สมบูรณ์",
+      ts_lowcorrosion_fix: "แนวทางแก้: ปรับ pH ให้อยู่ 1.8–2.2 เพิ่มความหนาซิงค์หรือสังกะสี และทำให้แห้งสนิทก่อนใช้งาน",
       ts_drop_h: "สีดรอปหรือหม่นลง",
       ts_drop_cause: "สาเหตุ: จุ่มนานเกินจนฟิล์มหนาเกิน หรือความเข้มข้นน้ำยาสูงเกิน",
       ts_drop_fix: "แนวทางแก้: ลดเวลาในการจุ่ม และเจือจางน้ำยาตามคำแนะนำ",
