--- a/products/passivation/troubleshootinghexavalentchromeblack.html
+++ b/products/passivation/troubleshootinghexavalentchromeblack.html
@@ -272,7 +272,7 @@
         <h2 id="intro-h" class="section" data-i18n-key="intro_h">ภาพรวมผลิตภัณฑ์ & บริบท</h2>
         <div class="content">
           <p data-i18n-key="intro_p1">
-            สีโครเมตสีดำชนิดโครม 6 (Black Chromate, Cr6) ใช้บนผิวชุบสังกะสีเพื่อให้ฟิล์มสีดำเงาและเพิ่มความทนทานต่อการกัดกร่อน เหมาะกับชิ้นส่วนที่ต้องการความพรีเมียมและการป้องกันสนิม
+            สีโครเมตสีดำชนิดโครม 6 (Black Chromate, Cr6) ใช้บนผิวชุบซิงค์หรือสังกะสีเพื่อให้ฟิล์มสีดำเงาและเพิ่มความทนทานต่อการกัดกร่อน เหมาะกับชิ้นส่วนที่ต้องการความพรีเมียมและการป้องกันสนิม
             อย่างไรก็ตาม Cr6 มีความเป็นพิษและถูกควบคุม จึงต้องปฏิบัติตามมาตรฐานความปลอดภัยอย่างเคร่งครัด
           </p>
         </div>
@@ -647,7 +647,7 @@
         toc_safety:"ความปลอดภัย & กฎระเบียบ",
 
         intro_h:"ภาพรวมผลิตภัณฑ์ & บริบท",
-        intro_p1:"สีโครเมตสีดำชนิดโครม 6 (Black Chromate, Cr6) ใช้บนผิวชุบสังกะสีเพื่อให้ฟิล์มสีดำเงาและเพิ่มความทนทานต่อการกัดกร่อน เหมาะกับชิ้นส่วนที่ต้องการความพรีเมียมและการป้องกันสนิม อย่างไรก็ตาม Cr6 มีความเป็นพิษและถูกควบคุม จึงต้องปฏิบัติตามมาตรฐานความปลอดภัยอย่างเคร่งครัด",
+        intro_p1:"สีโครเมตสีดำชนิดโครม 6 (Black Chromate, Cr6) ใช้บนผิวชุบซิงค์หรือสังกะสีเพื่อให้ฟิล์มสีดำเงาและเพิ่มความทนทานต่อการกัดกร่อน เหมาะกับชิ้นส่วนที่ต้องการความพรีเมียมและการป้องกันสนิม อย่างไรก็ตาม Cr6 มีความเป็นพิษและถูกควบคุม จึงต้องปฏิบัติตามมาตรฐานความปลอดภัยอย่างเคร่งครัด",
 
         features_h:"จุดเด่นของ CHROMATE BLACK 80",
         features_lead:"ดำลึก เงาเรียบ ป้องกันสนิมได้ดี หน้าต่างการทำงานกว้าง",
