--- a/products/passivation/troubleshootinghexavalentchromeblue.html
+++ b/products/passivation/troubleshootinghexavalentchromeblue.html
@@ -271,7 +271,7 @@
         <h2 id="intro-h" class="section" data-i18n-key="intro_h">ภาพรวม & บริบทด้านความปลอดภัย</h2>
         <div class="content">
           <p data-i18n-key="intro_p1">
-            สีโครเมตสีฟ้าชนิดโครม 6 (Blue Chromate, Cr6) ใช้สร้างฟิล์มบาง ๆ บนผิวสังกะสีเพื่อเพิ่มความทนทานต่อการกัดกร่อนและให้โทนสีฟ้าอมเงินสวยงาม 🔩✨
+            สีโครเมตสีฟ้าชนิดโครม 6 (Blue Chromate, Cr6) ใช้สร้างฟิล์มบาง ๆ บนผิวซิงค์หรือสังกะสีเพื่อเพิ่มความทนทานต่อการกัดกร่อนและให้โทนสีฟ้าอมเงินสวยงาม 🔩✨
             อย่างไรก็ตาม <strong>โครเมียมเฮกซาวาเลนต์ (Cr6)</strong> มีความเป็นพิษและถูกควบคุมอย่างเข้มงวดในหลายประเทศ จึงควรปฏิบัติตามมาตรฐานความปลอดภัยและ
             พิจารณาทางเลือก <strong>โครเมียมไตรวาเลนต์ (Cr3+)</strong> เมื่อต้องการลดความเสี่ยง 📜🚫
           </p>
@@ -339,14 +339,14 @@
   <h2 id="principles-h" class="section" data-i18n-key="principles_h">ส่วนที่ 1: หลักการ & คุณสมบัติ</h2>
   <div class="content">
     <p data-i18n-key="principle_p1">
-      หลังการชุบสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มี <strong>โครเมียมเฮกซาวาเลนต์ (Cr6+)</strong>
-      เพื่อสร้าง <em>ฟิล์มโครเมตสีฟ้า</em> บาง ๆ บนผิวสังกะสี ฟิล์มนี้ช่วยชะลอการเกิดสนิมขาว (white rust),
+      หลังการชุบซิงค์หรือสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มี <strong>โครเมียมเฮกซาวาเลนต์ (Cr6+)</strong>
+      เพื่อสร้าง <em>ฟิล์มโครเมตสีฟ้า</em> บาง ๆ บนผิวซิงค์หรือสังกะสี ฟิล์มนี้ช่วยชะลอการเกิดสนิมขาว (white rust),
       เพิ่มความทนทาน และให้ลุคสะอาดทันสมัย เหมาะกับฮาร์ดแวร์ ยานยนต์ เครื่องใช้ไฟฟ้า และชิ้นส่วนที่โชว์ผิว
     </p>
 
     <ul>
       <li data-i18n-key="principle_b1">
-        ใช้ได้กับสายชุบสังกะสีทั้งระบบกรดและระบบด่าง (bath compatibility สูง; รองรับการผลิตต่อเนื่อง)
+        ใช้ได้กับสายชุบซิงค์หรือสังกะสีทั้งระบบกรดและระบบด่าง (bath compatibility สูง; รองรับการผลิตต่อเนื่อง)
       </li>
       <li data-i18n-key="principle_b2">
         ควบคุมการล้างอย่างเข้มงวดระหว่างขั้นตอน เพื่อลด <em>drag-in/drag-out</em> และคงเสถียรภาพของบ่อ
@@ -433,7 +433,7 @@
   <h2 id="steps-h" class="section" data-i18n-key="process_h">ขั้นตอนการจุ่ม</h2>
   <div class="content">
     <ul>
-      <li data-i18n-key="proc_1">ชิ้นงานชุบสังกะสีเรียบร้อยแล้ว (<strong>ความหนา ≥ 5 ไมครอน</strong>; สม่ำเสมอทั่วชิ้นงาน)</li>
+      <li data-i18n-key="proc_1">ชิ้นงานชุบซิงค์หรือสังกะสีเรียบร้อยแล้ว (<strong>ความหนา ≥ 5 ไมครอน</strong>; สม่ำเสมอทั่วชิ้นงาน)</li>
       <li data-i18n-key="proc_2">ล้างน้ำสะอาด (อย่างน้อย 1–2 ขั้น) เพื่อลดสารตกค้างจากบ่อก่อนหน้า</li>
       <li data-i18n-key="proc_3">จุ่มในบ่อ<strong>ซิงค์โครเมติ้งสีฟ้า (Cr6+)</strong> ตามเวลาที่กำหนดเพื่อพัฒนาฟิล์ม</li>
       <li data-i18n-key="proc_4">ล้างน้ำสะอาดทันทีหลังจุ่ม เพื่อชะสารเคมีส่วนเกินและหยุดปฏิกิริยา</li>
@@ -441,7 +441,7 @@
       <li data-i18n-key="proc_6">อบหรือเป่าลมให้แห้งทันที (ตั้งจุดเป่า/เตาอบไว้ใกล้บ่อเพื่อลดเวลาแขวนค้าง)</li>
     </ul>
     <p data-i18n-key="proc_warn">
-      <strong>⚠️ ต้องรวดเร็ว:</strong> หลังยกจากบ่อโครเมต ให้ล้างและทำให้แห้งโดยทันที เพื่อลดการดึงผิวสังกะสี (zinc pulling),
+      <strong>⚠️ ต้องรวดเร็ว:</strong> หลังยกจากบ่อโครเมต ให้ล้างและทำให้แห้งโดยทันที เพื่อลดการดึงผิวซิงค์หรือสังกะสี (zinc pulling),
       ลดโอกาสเกิดฟิล์มเหลือง/คราบน้ำ และคงคุณภาพลุคผิว
     </p>
   </div>
@@ -634,7 +634,7 @@
         toc_safety:"ความปลอดภัย & กฎระเบียบ",
 
         intro_h:"ภาพรวม & บริบทด้านความปลอดภัย",
-        intro_p1:"สีโครเมตสีฟ้า (Cr6) ใช้สร้างฟิล์มบาง ๆ บนผิวสังกะสีเพื่อเพิ่มความทนทานต่อการกัดกร่อนและให้โทนสีฟ้าอมเงิน อย่างไรก็ตาม Cr6 มีความเป็นพิษและถูกควบคุมอย่างเข้มงวด จึงควรปฏิบัติตามมาตรฐานและพิจารณา Cr3+ เพื่อลดความเสี่ยง",
+        intro_p1:"สีโครเมตสีฟ้า (Cr6) ใช้สร้างฟิล์มบาง ๆ บนผิวซิงค์หรือสังกะสีเพื่อเพิ่มความทนทานต่อการกัดกร่อนและให้โทนสีฟ้าอมเงิน อย่างไรก็ตาม Cr6 มีความเป็นพิษและถูกควบคุมอย่างเข้มงวด จึงควรปฏิบัติตามมาตรฐานและพิจารณา Cr3+ เพื่อลดความเสี่ยง",
 
         features_h:"จุดเด่นของซิงค์โครเมติ้ง (ผง)",
         features_lead:"สีน้ำเงินสวย ป้องกันสนิมดี ปริมาณใช้ต่ำ — พร้อมข้อควรระวังด้านความปลอดภัย",
@@ -647,8 +647,8 @@
         
             principles_h: "ส่วนที่ 1: หลักการ & คุณสมบัติ",
     principle_p1:
-      "หลังการชุบสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มี โครเมียมเฮกซาวาเลนต์ (Cr6+) เพื่อสร้าง ฟิล์มโครเมตสีฟ้า บาง ๆ บนผิวสังกะสี ฟิล์มนี้ช่วยชะลอการเกิดสนิมขาว (white rust), เพิ่มความทนทาน และให้ลุคสะอาดทันสมัย เหมาะกับฮาร์ดแวร์ ยานยนต์ เครื่องใช้ไฟฟ้า และชิ้นส่วนที่โชว์ผิว",
-    principle_b1: "ใช้ได้กับสายชุบสังกะสีทั้งระบบกรดและระบบด่าง (bath compatibility สูง; รองรับการผลิตต่อเนื่อง)",
+      "หลังการชุบซิงค์หรือสังกะสี ชิ้นงานถูกจุ่มในสารละลายที่มี โครเมียมเฮกซาวาเลนต์ (Cr6+) เพื่อสร้าง ฟิล์มโครเมตสีฟ้า บาง ๆ บนผิวซิงค์หรือสังกะสี ฟิล์มนี้ช่วยชะลอการเกิดสนิมขาว (white rust), เพิ่มความทนทาน และให้ลุคสะอาดทันสมัย เหมาะกับฮาร์ดแวร์ ยานยนต์ เครื่องใช้ไฟฟ้า และชิ้นส่วนที่โชว์ผิว",
+    principle_b1: "ใช้ได้กับสายชุบซิงค์หรือสังกะสีทั้งระบบกรดและระบบด่าง (bath compatibility สูง; รองรับการผลิตต่อเนื่อง)",
     principle_b2: "ควบคุมการล้างอย่างเข้มงวดระหว่างขั้นตอน เพื่อลด drag-in/drag-out และคงเสถียรภาพของบ่อ",
     principle_b3: "จัดให้มีลมร้อน/เตาอบใกล้บ่อ เพื่อเร่งการแห้ง ลดคราบน้ำและลดโอกาสเกิดฟิล์มเหลืองหลังยกงาน",
     principle_b4: "เมื่อควบคุมพารามิเตอร์เหมาะสม จะยกระดับชั่วโมงทนสนิมขาวได้อย่างมีนัยสำคัญโดยไม่กระทบลุคผิว",
@@ -670,14 +670,14 @@
       "4) ข้อควรระวัง: หลีกเลี่ยงน้ำประปาเพราะแร่ธาตุ (เช่น Ca/Mg/Cl⁻) ทำให้เกิดตะกอน ลดประสิทธิภาพฟิล์ม ตรวจความสะอาดของถัง/ท่อ/ปั๊มเป็นระยะเพื่อลดจุดกำเนิดการปนเปื้อน",
 
     process_h: "ขั้นตอนการจุ่ม",
-    proc_1: "ชิ้นงานชุบสังกะสีเรียบร้อยแล้ว (ความหนา ≥ 5 ไมครอน; สม่ำเสมอทั่วชิ้นงาน)",
+    proc_1: "ชิ้นงานชุบซิงค์หรือสังกะสีเรียบร้อยแล้ว (ความหนา ≥ 5 ไมครอน; สม่ำเสมอทั่วชิ้นงาน)",
     proc_2: "ล้างน้ำสะอาด (อย่างน้อย 1–2 ขั้น) เพื่อลดสารตกค้างจากบ่อก่อนหน้า",
     proc_3: "จุ่มในบ่อซิงค์โครเมติ้งสีฟ้า (Cr6+) ตามเวลาที่กำหนดเพื่อพัฒนาฟิล์ม",
     proc_4: "ล้างน้ำสะอาดทันทีหลังจุ่ม เพื่อชะสารเคมีส่วนเกินและหยุดปฏิกิริยา",
     proc_5: "(ทางเลือก) จุ่มน้ำร้อนเพื่อลดคราบน้ำและเร่งการแห้ง",
     proc_6: "อบหรือเป่าลมให้แห้งทันที (ตั้งจุดเป่า/เตาอบไว้ใกล้บ่อเพื่อลดเวลาแขวนค้าง)",
     proc_warn:
-      "⚠️ ต้องรวดเร็ว: หลังยกจากบ่อโครเมต ให้ล้างและทำให้แห้งโดยทันที เพื่อลดการดึงผิวสังกะสี (zinc pulling), ลดโอกาสเกิดฟิล์มเหลือง/คราบน้ำ และคงคุณภาพลุคผิว",
+      "⚠️ ต้องรวดเร็ว: หลังยกจากบ่อโครเมต ให้ล้างและทำให้แห้งโดยทันที เพื่อลดการดึงผิวซิงค์หรือสังกะสี (zinc pulling), ลดโอกาสเกิดฟิล์มเหลือง/คราบน้ำ และคงคุณภาพลุคผิว",
 
     safety_h: "ความปลอดภัย & กฎระเบียบ",
     safety_ppe_h: "ความปลอดภัยส่วนบุคคล (PPE) และสถานที่ทำงาน",
