--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -332,7 +332,7 @@
         <h2 id="principles-h" class="section" data-i18n-key="principles_h">ส่วนที่ 1: หลักการ & คุณสมบัติ</h2>
         <div class="content">
           <p data-i18n-key="principles_p1">
-            หลังจากชุบสังกะสี (zinc plating) ชิ้นงานถูกจุ่มในสารละลายโครเมียมเฮกซาวาเลนต์ (Cr6) เพื่อสร้างชั้นฟิล์มโครเมตสีเหลืองอมรุ้ง
+            หลังจากชุบซิงค์หรือสังกะสี (zinc plating) ชิ้นงานถูกจุ่มในสารละลายโครเมียมเฮกซาวาเลนต์ (Cr6) เพื่อสร้างชั้นฟิล์มโครเมตสีเหลืองอมรุ้ง
             ฟิล์มนี้ช่วยเพิ่มความทนทานต่อการกัดกร่อนและให้ผิวสวยงาม เหมาะกับชิ้นส่วนยานยนต์ ฮาร์ดแวร์ และอิเล็กทรอนิกส์
           </p>
           <ul>
@@ -570,7 +570,7 @@
         feat_6_t:"แนวทางความปลอดภัย",   feat_6_d:"Cr6 เป็นอันตราย ต้องปฏิบัติตาม RoHS/REACH และใช้ PPE",
 
         principles_h:"ส่วนที่ 1: หลักการ & คุณสมบัติ",
-        principles_p1:"หลังจากชุบสังกะสี (zinc plating) ชิ้นงานถูกจุ่มในสารละลายโครเมียมเฮกซาวาเลนต์ (Cr6) เพื่อสร้างชั้นฟิล์มโครเมตสีเหลืองอมรุ้ง ฟิล์มนี้ช่วยเพิ่มความทนทานต่อการกัดกร่อนและให้ผิวสวยงาม เหมาะกับชิ้นส่วนยานยนต์ ฮาร์ดแวร์ และอิเล็กทรอนิกส์",
+        principles_p1:"หลังจากชุบซิงค์หรือสังกะสี (zinc plating) ชิ้นงานถูกจุ่มในสารละลายโครเมียมเฮกซาวาเลนต์ (Cr6) เพื่อสร้างชั้นฟิล์มโครเมตสีเหลืองอมรุ้ง ฟิล์มนี้ช่วยเพิ่มความทนทานต่อการกัดกร่อนและให้ผิวสวยงาม เหมาะกับชิ้นส่วนยานยนต์ ฮาร์ดแวร์ และอิเล็กทรอนิกส์",
         principles_b1:"โทนสีขึ้นกับความเข้มข้น/เวลา/อุณหภูมิ",
         principles_b2:"จำเป็นต้องจัดการด้านความปลอดภัยของ Cr6 อย่างเคร่งครัด",
         principles_b3:"งานที่ต้องตาม RoHS/REACH อาจต้องพิจารณาโครเมียม 3+",
