--- a/products/passivation/yellow-passivation-on-zinc.html
+++ b/products/passivation/yellow-passivation-on-zinc.html
@@ -349,7 +349,7 @@
     <h3 class="subhead" data-i18n-key="principle_cor_h">1) การป้องกันการกัดกร่อน (Corrosion Protection)</h3>
     <p data-i18n-key="principle_cor_p1">
       ฟิล์มโครเมทสีเหลืองทำหน้าที่ปกป้องชั้นซิงค์ที่อยู่ด้านล่างจากปฏิกิริยาออกซิเดชัน โดยช่วยชะลอการเกิดสนิมขาว 
-      (white rust) ซึ่งเป็นออกไซด์ของสังกะสีที่เกิดเมื่อสัมผัสออกซิเจน/ความชื้นในอากาศ 
+      (white rust) ซึ่งเป็นออกไซด์ของซิงค์หรือสังกะสีที่เกิดเมื่อสัมผัสออกซิเจน/ความชื้นในอากาศ 
       การเคลือบนี้ช่วยยืดอายุการใช้งานของชิ้นส่วนโลหะได้ชัดเจน โดยเฉพาะในสภาพแวดล้อมที่ชื้นหรือมีคลอไรด์
     </p>
     <p data-i18n-key="principle_cor_p2">
@@ -797,7 +797,7 @@
 
     principle_cor_h: "1) การป้องกันการกัดกร่อน (Corrosion Protection)",
     principle_cor_p1:
-      "ฟิล์มโครเมทสีเหลืองทำหน้าที่ปกป้องชั้นซิงค์ที่อยู่ด้านล่างจากปฏิกิริยาออกซิเดชัน โดยช่วยชะลอการเกิดสนิมขาว (white rust) ซึ่งเป็นออกไซด์ของสังกะสีที่เกิดเมื่อสัมผัสออกซิเจน/ความชื้นในอากาศ การเคลือบนี้ช่วยยืดอายุการใช้งานของชิ้นส่วนโลหะได้ชัดเจน โดยเฉพาะในสภาพแวดล้อมที่ชื้นหรือมีคลอไรด์",
+      "ฟิล์มโครเมทสีเหลืองทำหน้าที่ปกป้องชั้นซิงค์ที่อยู่ด้านล่างจากปฏิกิริยาออกซิเดชัน โดยช่วยชะลอการเกิดสนิมขาว (white rust) ซึ่งเป็นออกไซด์ของซิงค์หรือสังกะสีที่เกิดเมื่อสัมผัสออกซิเจน/ความชื้นในอากาศ การเคลือบนี้ช่วยยืดอายุการใช้งานของชิ้นส่วนโลหะได้ชัดเจน โดยเฉพาะในสภาพแวดล้อมที่ชื้นหรือมีคลอไรด์",
     principle_cor_p2:
       "ระบบการป้องกันเป็นแบบสองชั้น (dual protection): ชั้นซิงค์ทำหน้าที่แอโนดเสียสละ ส่วนฟิล์มโครเมททำหน้าที่เป็นบาเรียร์เคมีลดอัตราการเกิดปฏิกิริยา",
 
