upload all files

--- a/products/passivation/iridescent-passivation-on-zinc.html
+++ b/products/passivation/iridescent-passivation-on-zinc.html
@@ -718,25 +718,25 @@
       "คุ้มต้นทุน ดูแลง่าย: อายุบ่อนาน เติมสาร (replenish) ได้ ควบคุมคุณภาพได้สม่ำเสมอในการผลิตจำนวนมาก",
 
     prism_process_h: "ส่วนที่ 2: ขั้นตอนการทำงาน (ละเอียด)",
-    prism_step1_h: "1) ชิ้นงานชุบซิงค์เรียบร้อย",
+    prism_step1_h: "ชิ้นงานชุบซิงค์เรียบร้อย",
     prism_step1_p:
       "แนะนำความหนาซิงค์ ≥ 8 μm เพื่อความทนทานและการเกิดฟิล์มที่เสถียร ความหนาที่สม่ำเสมอจะช่วยให้สีออกสม่ำเสมอทั่วทั้งชิ้นงาน",
-    prism_step2_h: "2) ล้างทำความสะอาดเบื้องต้น",
+    prism_step2_h: "ล้างทำความสะอาดเบื้องต้น",
     prism_step2_p:
       "ล้างน้ำสะอาด 2 ขั้นเพื่อลดการปนเปื้อนจากขั้นตอนก่อนหน้าให้เหลือน้อยที่สุด การล้างที่ดีช่วยป้องกันปัญหาสีด่าง/ฟิล์มไม่สม่ำเสมอ",
-    prism_step3_h: "3) เปิดผิวด้วยกรด (Acid Activation)",
+    prism_step3_h: "เปิดผิวด้วยกรด (Acid Activation)",
     prism_step3_p:
       "จุ่มกรดดินประสิว (HNO₃) 0.3–1% v/v เพียง 2–5 วินาที เพื่อขจัดออกไซด์จาง ๆ และเตรียมผิวให้พร้อมสร้างฟิล์มโครเมต อย่าจุ่มนานเกินไปเพื่อลดความเสี่ยงการกัดผิวมากเกินจำเป็น",
-    prism_step4_h: "4) ล้างน้ำก่อนเข้าบ่อ Prism 350",
+    prism_step4_h: "ล้างน้ำก่อนเข้าบ่อ Prism 350",
     prism_step4_p:
       "ล้างน้ำสะอาดต่อเนื่อง 2 ขั้น (แนะนำใช้น้ำไหล) เพื่อกำจัดกรดตกค้าง ลด carry-over ที่ทำให้บ่อโครเมตแปรปรวน",
-    prism_step5_h: "5) เคลือบโครเมตสีรุ้ง (Prism 350)",
+    prism_step5_h: "เคลือบโครเมตสีรุ้ง (Prism 350)",
     prism_step5_p:
       "จุ่ม Prism 350 45–60 วินาที (ปรับได้ 30–90 วินาทีเพื่อตั้งเฉดตามต้องการ) ยิ่งเวลานาน ฟิล์มยิ่งหนาและเฉดสีจะขยับตามลำดับคลื่น ควบคุมอุณหภูมิ/ความเข้มข้นของบ่อให้คงที่เพื่อสีที่สม่ำเสมอ",
-    prism_step6_h: "6) ล้างน้ำขั้นสุดท้าย",
+    prism_step6_h: "ล้างน้ำขั้นสุดท้าย",
     prism_step6_p:
       "ล้างน้ำสะอาด 2 ขั้น (สามารถตามด้วยน้ำกลั่นเพื่อกำจัดคลอไรด์) ช่วยให้ผิวสะอาด ลดคราบ และเตรียมพร้อมสำหรับการทำให้แห้ง",
-    prism_step7_h: "7) ทำให้แห้ง",
+    prism_step7_h: "ทำให้แห้ง",
     prism_step7_p:
       "เป่าลมหรืออบให้แห้งจนสนิท ฟิล์มใหม่ยังเปราะบาง—หลีกเลี่ยงการเหวี่ยงแรงขณะยังเปียก เพราะอาจฉีกขาดและทำให้สีไม่สม่ำเสมอ",
 
@@ -878,25 +878,25 @@
       "Cost-effective & maintainable: long bath life, easy replenishment, stable quality in high-volume production.",
 
     prism_process_h: "Part 2: Detailed Process",
-    prism_step1_h: "1) Zinc-plated parts ready",
+    prism_step1_h: "Zinc-plated parts ready",
     prism_step1_p:
       "Recommended zinc thickness ≥ 8 μm for durability and stable film formation; consistent base thickness helps achieve uniform color.",
-    prism_step2_h: "2) Initial rinsing",
+    prism_step2_h: "Initial rinsing",
     prism_step2_p:
       "Rinse twice with clean water to minimize carry-over from prior steps; good rinsing prevents patchy color and non-uniform films.",
-    prism_step3_h: "3) Acid activation",
+    prism_step3_h: "Acid activation",
     prism_step3_p:
       "Dip in nitric acid (HNO₃) 0.3–1% v/v for just 2–5 s to remove light oxides and activate the surface. Avoid over-activation from excessive time.",
-    prism_step4_h: "4) Pre-Prism rinsing",
+    prism_step4_h: "Pre-Prism rinsing",
     prism_step4_p:
       "Rinse twice (counter-flow recommended) to remove residual acid and minimize carry-over that can destabilize the chromate bath.",
-    prism_step5_h: "5) Rainbow chromate (Prism 350)",
+    prism_step5_h: "Rainbow chromate (Prism 350)",
     prism_step5_p:
       "Dip in Prism 350 for 45–60 s (tune 30–90 s to target hue). Longer times build thicker films and shift hue accordingly. Keep bath temperature/concentration stable for best uniformity.",
-    prism_step6_h: "6) Final rinsing",
+    prism_step6_h: "Final rinsing",
     prism_step6_p:
       "Rinse twice with clean water (optionally finish with DI to purge chlorides). Clean rinsing reduces stains and prepares for drying.",
-    prism_step7_h: "7) Drying",
+    prism_step7_h: "Drying",
     prism_step7_p:
       "Air-blow or oven dry thoroughly. Fresh films are fragile—avoid hard spinning while wet to prevent tearing and non-uniform color.",
 
