--- a/products/passivation/troubleshootinghexavalentchromeblue.html
+++ b/products/passivation/troubleshootinghexavalentchromeblue.html
@@ -696,7 +696,7 @@
     safe_alt: "หากต้องสอดคล้อง RoHS/REACH ในผลิตภัณฑ์ แนะนำพิจารณาโซลูชัน Cr3+ เป็นทางเลือก",
 
     ts_h: "5 ปัญหาหลักที่มักพบ & แนวทางแก้ไข (แบบละเอียด)",
-    ts_1_h: "1) สีจาง หรือไม่มีสี",
+    ts_1_h: "สีจาง หรือไม่มีสี",
     ts_1_desc: "ฟิล์มโครเมตบางเกินไป ทำให้โทนสีฟ้าไม่ชัด/ไม่ปรากฏ",
     ts_1_causes_h: "สาเหตุที่เป็นไปได้",
     ts_1_c1: "ความเข้มข้นของบ่อต่ำ (สารออกฤทธิ์ถูกดึงออกจากระบบต่อเนื่อง via drag-out)",
@@ -705,7 +705,7 @@
     ts_1_f1: "เพิ่มความเข้มข้นตามสเปก: เติมผงซิงค์โครเมติ้งตามคู่มือบ่อ",
     ts_1_f2: "เพิ่มเวลาจุ่ม (dwell) เพื่อเพิ่มความหนาฟิล์มให้ถึงระดับที่ให้สีชัด",
 
-    ts_2_h: "2) คราบเหลือง หรือสีไม่สม่ำเสมอ",
+    ts_2_h: "คราบเหลือง หรือสีไม่สม่ำเสมอ",
     ts_2_causes_h: "สาเหตุที่เป็นไปได้",
     ts_2_c1: "หลังยกงานค้างอากาศนานเกินไปก่อนล้าง/ทำให้แห้ง → เกิดปฏิกิริยาต่อเนื่อง",
     ts_2_c2: "การล้างไม่สะอาด มีสารตกค้างจากบ่อก่อนหน้าหรือจากบ่อโครเมต",
@@ -713,7 +713,7 @@
     ts_2_f1: "เร่งขั้นล้างและทำให้แห้งทันทีหลังยกชิ้นงาน ลดเวลาค้างอากาศ",
     ts_2_f2: "เพิ่มจำนวนขั้นล้าง/ปรับอัตราการไหลของน้ำให้ทั่วถึงทุกพื้นผิว",
 
-    ts_3_h: "3) กันสนิมได้ไม่ดี/เกิดสนิมขาวเร็ว",
+    ts_3_h: "กันสนิมได้ไม่ดี/เกิดสนิมขาวเร็ว",
     ts_3_causes_h: "สาเหตุที่เป็นไปได้",
     ts_3_c1: "ความหนาฟิล์มไม่พอ (เวลา/ความเข้มข้นไม่ถึง)",
     ts_3_c2: "อุณหภูมิอบแห้งสูงเกินไปจนเกิด micro-cracks ลดคุณสมบัติป้องกัน",
@@ -721,13 +721,13 @@
     ts_3_f1: "เพิ่ม dwell หรือปรับความเข้มข้นเพื่อเพิ่มความหนาฟิล์ม",
     ts_3_f2: "ควบคุมอุณหภูมิอบให้อยู่ในช่วงแนะนำของกระบวนการ",
 
-    ts_4_h: "4) มีตะกอนในน้ำยา",
+    ts_4_h: "มีตะกอนในน้ำยา",
     ts_4_cause_h: "สาเหตุที่เป็นไปได้",
     ts_4_c1: "ใช้น้ำประปา/น้ำที่มีแร่ธาตุ (Ca/Mg/Cl⁻) → เกิดการตกตะกอนร่วมกับสารในบ่อ",
     ts_4_fix_h: "แนวทางแก้ไข",
     ts_4_f1: "ใช้น้ำ DI/RO/น้ำกลั่นเท่านั้น และตรวจระบบกรอง/การกวนให้เหมาะสม",
 
-    ts_5_h: "5) ฟิล์มหลุดลอก/เกิดรอยขีดข่วน",
+    ts_5_h: "ฟิล์มหลุดลอก/เกิดรอยขีดข่วน",
     ts_5_cause_h: "สาเหตุที่เป็นไปได้",
     ts_5_c1: "จัดการชิ้นงานไม่ระมัดระวังตอนฟิล์มยังเปียก (ฟิล์มอ่อนและไวต่อการถลอก)",
     ts_5_fix_h: "แนวทางแก้ไข",
@@ -815,7 +815,7 @@
     safe_alt: "If product compliance with RoHS/REACH is required, consider trivalent (Cr3+) alternatives.",
 
     ts_h: "5 Common Issues & Detailed Fixes",
-    ts_1_h: "1) Faded or No Color",
+    ts_1_h: "Faded or No Color",
     ts_1_desc: "Chromate film too thin; blue tone faint or absent.",
     ts_1_causes_h: "Likely Causes",
     ts_1_c1: "Low bath strength (active species lost over time via drag-out).",
@@ -824,7 +824,7 @@
     ts_1_f1: "Increase concentration per spec: dose zinc chromating powder per bath manual.",
     ts_1_f2: "Increase dwell to build adequate film thickness.",
 
-    ts_2_h: "2) Yellow Stain or Non-uniform Color",
+    ts_2_h: "Yellow Stain or Non-uniform Color",
     ts_2_causes_h: "Likely Causes",
     ts_2_c1: "Excess air exposure after lift before rinse/dry → continued reaction.",
     ts_2_c2: "Inadequate rinsing; residues remain from prior step or chromate bath.",
@@ -832,7 +832,7 @@
     ts_2_f1: "Rinse and dry immediately after lift to minimize post-reaction.",
     ts_2_f2: "Increase rinse stages/flow to reach all surfaces.",
 
-    ts_3_h: "3) Poor Corrosion Resistance / Early White Rust",
+    ts_3_h: "Poor Corrosion Resistance / Early White Rust",
     ts_3_causes_h: "Likely Causes",
     ts_3_c1: "Insufficient film build (time/strength too low).",
     ts_3_c2: "Overheating during dry causing micro-cracks in the film.",
@@ -840,13 +840,13 @@
     ts_3_f1: "Extend dwell or increase strength to build the film.",
     ts_3_f2: "Control drying temperature within recommended range.",
 
-    ts_4_h: "4) Sediment in Bath",
+    ts_4_h: "Sediment in Bath",
     ts_4_cause_h: "Likely Cause",
     ts_4_c1: "Use of tap water; minerals (Ca/Mg/Cl⁻) precipitate with bath chemistry.",
     ts_4_fix_h: "Corrective Action",
     ts_4_f1: "Use DI/RO/distilled water only; verify filtration/agitation setup.",
 
-    ts_5_h: "5) Peeling/Scratches on Film",
+    ts_5_h: "Peeling/Scratches on Film",
     ts_5_cause_h: "Likely Cause",
     ts_5_c1: "Rough handling while the film is still wet (soft/scratch-prone state).",
     ts_5_fix_h: "Corrective Action",
