--- a/products/passivation/yellow-passivation-on-zinc.html
+++ b/products/passivation/yellow-passivation-on-zinc.html
@@ -824,35 +824,35 @@
 
     process_h: "ส่วนที่ 2: ขั้นตอนการใช้",
 
-    proc_0_h: "1) ชิ้นงานที่ชุบซิงค์เรียบร้อย",
+    proc_0_h: "ชิ้นงานที่ชุบซิงค์เรียบร้อย",
     proc_0:
       "ชิ้นงานต้องผ่านการชุบซิงค์ (zinc plating) มาแล้ว โดยแนะนำให้มีความหนาของชั้นซิงค์ ≥ 8 ไมครอน เพื่อให้มีผิวเพียงพอสำหรับการเกิดปฏิกิริยาและให้การป้องกันการกัดกร่อนที่ดี",
 
-    proc_1_h: "2) การล้างทำความสะอาดขั้นต้น",
+    proc_1_h: "การล้างทำความสะอาดขั้นต้น",
     proc_1:
       "ล้างน้ำสะอาด 2 ครั้ง เพื่อลดสารเคมี/คลอไรด์ตกค้างจากการชุบซิงค์ การล้างที่สะอาดจะช่วยให้ผิวพร้อมสำหรับขั้นตอนเปิดผิวด้วยกรด และลดการปนเปื้อนเข้าสู่บ่อโครเมต",
 
-    proc_2_h: "3) การเตรียมผิวด้วยกรด (Acid Activation)",
+    proc_2_h: "การเตรียมผิวด้วยกรด (Acid Activation)",
     proc_2:
       "จุ่มกรดไนตริก (HNO₃) 1–2% v/v ประมาณ 2–5 วินาที เพื่อเปิดผิวซิงค์ ขจัดออกไซด์ที่อาจก่อตัวบางส่วน ทำให้พื้นผิวพร้อมสำหรับการเกิดฟิล์มโครเมทอย่างสม่ำเสมอ",
 
-    proc_3_h: "4) การล้างหลังการเปิดผิว",
+    proc_3_h: "การล้างหลังการเปิดผิว",
     proc_3:
       "ล้างน้ำสะอาดทันทีหลังจุ่มกรดเพื่อตัดกรดและป้องกันการ carry-over เข้าบ่อโครเมต แนะนำล้างให้เพียงพอจนค่า pH บนผิวใกล้เป็นกลาง",
 
-    proc_4_h: "5) การเคลือบโครเมทสีเหลือง",
+    proc_4_h: "การเคลือบโครเมทสีเหลือง",
     proc_4:
       "จุ่ม Tri Yellow BM ประมาณ 30–60 วินาที (ปรับได้ 30–90 วินาที ตามโทนสี/ข้อกำหนดการทดสอบ) เวลาจุ่มที่นานขึ้นมักให้เฉดเข้มขึ้น แต่ควรอยู่ในช่วงที่ผู้ผลิตแนะนำเพื่อคงคุณสมบัติการป้องกันการกัดกร่อน",
 
-    proc_5_h: "6) การล้างหลังเคลือบ",
+    proc_5_h: "การล้างหลังเคลือบ",
     proc_5:
       "ล้างน้ำสะอาด 2 ครั้ง เพื่อลดสารตกค้างจาก Tri Yellow BM และช่วยให้ฟิล์มคงตัว แนะนำใช้น้ำคุณภาพดี (DI/RO) เพื่อลดคราบเกลือหรือรอยคราบหลังแห้ง",
 
-    proc_6_h: "7) การย้อมสีเหลือง (ตัวเลือกเสริม)",
+    proc_6_h: "การย้อมสีเหลือง (ตัวเลือกเสริม)",
     proc_6:
       "จุ่ม Color Yellow dye ประมาณ 30–60 วินาที ในกรณีที่ต้องการสีเหลืองที่เข้มขึ้นหรือสม่ำเสมอขึ้น ควรควบคุมเวลา/อุณหภูมิ/ความเข้มข้นของสีย้อมตามคู่มือ เพื่อหลีกเลี่ยงคราบหรือความมันเงาที่ไม่พึงประสงค์",
 
-    proc_7_h: "8) การล้างขั้นสุดท้ายและการทำให้แห้ง",
+    proc_7_h: "การล้างขั้นสุดท้ายและการทำให้แห้ง",
     proc_7:
       "ล้างน้ำสะอาดเพื่อกำจัดสีย้อมส่วนเกิน แล้วเป่าลมร้อนหรืออบให้แห้งจนสนิท ข้อควรระวัง: หลีกเลี่ยงการเหวี่ยงแรงในขณะที่ฟิล์มยังเปียก เนื่องจากฟิล์มยังเปราะบางและอาจฉีกขาดได้",
 
@@ -1057,35 +1057,35 @@
 
     process_h: "Part 2: Operating Steps",
 
-    proc_0_h: "1) Confirm Zinc Plating",
+    proc_0_h: "Confirm Zinc Plating",
     proc_0:
       "Parts must be zinc-plated; recommended zinc thickness is ≥ 8 μm to ensure sufficient surface for reaction and robust corrosion protection.",
 
-    proc_1_h: "2) Initial Rinsing",
+    proc_1_h: "Initial Rinsing",
     proc_1:
       "Rinse twice with clean water to remove residues/chlorides from zinc plating. Proper rinsing prepares the surface for acid activation and reduces contamination in the chromate bath.",
 
-    proc_2_h: "3) Acid Activation",
+    proc_2_h: "Acid Activation",
     proc_2:
       "Dip in nitric acid (HNO₃) 1–2% v/v for about 2–5 s to activate the zinc and remove nascent oxides, enabling uniform chromate film formation.",
 
-    proc_3_h: "4) Post-Activation Rinse",
+    proc_3_h: "Post-Activation Rinse",
     proc_3:
       "Immediately rinse to cut acid and prevent carry-over into the chromate bath. Rinse sufficiently until surface pH approaches neutral.",
 
-    proc_4_h: "5) Yellow Chromate Coating",
+    proc_4_h: "Yellow Chromate Coating",
     proc_4:
       "Immerse in Tri Yellow BM for ~30–60 s (adjustable 30–90 s per tone/spec). Longer time typically deepens the tone, but stay within supplier limits to preserve corrosion-resistance properties.",
 
-    proc_5_h: "6) Post-Coat Rinsing",
+    proc_5_h: "Post-Coat Rinsing",
     proc_5:
       "Double rinse to reduce residuals and stabilize the film. Prefer DI/RO water to minimize salt marks or drying stains.",
 
-    proc_6_h: "7) Yellow Dyeing (Optional)",
+    proc_6_h: "Yellow Dyeing (Optional)",
     proc_6:
       "Dip in Color Yellow dye for ~30–60 s to deepen/level the yellow tone. Control time/temperature/concentration per the TDS to avoid haze or unwanted gloss.",
 
-    proc_7_h: "8) Final Rinse & Dry",
+    proc_7_h: "Final Rinse & Dry",
     proc_7:
       "Rinse to remove excess dye, then warm-air blow or oven dry until fully dry. Caution: avoid aggressive spinning while the film is wet—the fresh film is fragile and may tear.",
 
