upload all files

--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -361,7 +361,7 @@
         <!-- Ultrasonic -->
         <article id="ultrasonic" class="card lift reveal">
           <picture>
-            <img src="https://i.imgur.com/XW7z2sn.jpeg" alt="Ultrasonic cleaner lifts soils with high-frequency waves">
+            <img src="https://img2.pic.in.th/pic/ultrasonic.png" alt="Ultrasonic cleaner lifts soils with high-frequency waves">
           </picture>
           <div class="body">
             <div class="badges"><span class="badge">Ultrasonic Cleaner</span><span class="badge">Pretreatment</span></div>
