--- a/products/pretreatment/ultrasonic.html
+++ b/products/pretreatment/ultrasonic.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Cleaner 3388 — ผงล้างอัลตร้าโซนิค">
   <meta property="og:description" content="ผงทำความสะอาดสำหรับเครื่องอัลตร้าโซนิค เพิ่มประสิทธิภาพการล้างด้วย Cavitation ใช้ได้กับหลายโลหะ พร้อมอัตราการใช้และการควบคุมบ่อ">
   <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/ultrasonic.html">
-  <meta property="og:image" content="https://i.imgur.com/XW7z2sn.jpeg">
+  <meta property="og:image" content="https://img2.pic.in.th/pic/ultrasonic.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
   "@type": "Product",
   "name": "Cleaner 3388 — Ultrasonic Cleaning Powder",
   "description": "Alkaline ultrasonic cleaning powder enhancing cavitation efficiency. Suitable for stainless steel, steel, aluminum, zinc, galvanized, copper, brass, and magnesium. Typical use: 30–75 g/L, 50–85 °C, 2–5 min.",
-  "image": "https://i.imgur.com/XW7z2sn.jpeg",
+  "image": "https://img2.pic.in.th/pic/ultrasonic.png",
   "brand": {"@type": "Brand","name": "Baume Chemical"},
   "category": "Pretreatment / Ultrasonic Cleaning",
   "inLanguage": "th",
@@ -46,7 +46,7 @@
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/XW7z2sn.jpeg"/>
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/ultrasonic.png"/>
 
   <style>
     :root{
@@ -99,7 +99,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://i.imgur.com/XW7z2sn.jpeg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
+    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://img2.pic.in.th/pic/ultrasonic.png') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
     .hero h1{margin:6px 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-chip{position:absolute;top:calc(var(--header-h) + 10px);left:16px;z-index:1;display:inline-flex;align-items:center;gap:6px;padding:8px 12px;border-radius:999px;font-weight:800;text-decoration:none;background:#fff;border:1px solid rgba(2,8,20,.08);color:#0f172a;box-shadow:var(--shadow-1)}
