upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -852,7 +852,7 @@
       cnbr_equip_3: "Anodes and fixtures: Rigid anode/cathode bars and alkaline-resistant anode bags for brass anodes or separate copper/zinc anodes.",
 
       cnbr_maint_h: "Control and Maintenance",
-      cnbr_maint_1: "Weekly analysis: Copper 8.5–9.5 g/L, zinc 7.5–8.5 g/L, free NaCN 14–16 g/L.",
+      cnbr_maint_1: "Weekly analysis: Copper 8.5–9.5 g/L, zinc 7.5–8.5 g/L, NaCN 14–16 g/L.",
       cnbr_maint_2: "Start-up period: Add Ammonium chloride NH4Cl 2–3 g/L daily to maintain the ammonia balance and color stability.",
       cnbr_maint_3: "Total strength adjustment: To raise Baumé by 1 degree, add about 15 g/L Meta Salt, always pre-dissolved in water before addition.",
       cnbr_maint_4: "Run records: Log temperature, current, and all additions every shift to enable trend tracking and troubleshooting.",
