upload all files

--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -335,7 +335,7 @@
 
       <!-- Brass -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/wEo6YIQ.jpeg" alt="Brass Polishing"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg" alt="Brass Polishing"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Nitric-free</span><span class="badge">Low Fume</span></div>
           <h3 data-i18n-key="br_title">ทองเหลือง (Brass Polishing)</h3>
@@ -357,7 +357,7 @@
 
       <!-- Steel -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/FHHDk78.jpeg" alt="Steel Brite Dip"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0-7.jpeg" alt="Steel Brite Dip"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Brite Dip</span><span class="badge">Deburr</span></div>
           <h3 data-i18n-key="steel_title">เหล็ก (Steel Brite Dip)</h3>
@@ -368,7 +368,7 @@
 
       <!-- Zinc & Lead -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/KmCDo7F.png" alt="Polishing for Zinc and Lead"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image1-4.jpeg" alt="Polishing for Zinc and Lead"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc/Lead</span><span class="badge">Restore Shine</span></div>
           <h3 data-i18n-key="zn_title">สังกะสีและตะกั่ว (Etched to a shine)</h3>
