--- a/products/polishing/zinc-electropolishing-solution.html
+++ b/products/polishing/zinc-electropolishing-solution.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="ACITEK MZ-52 — จุ่มเงาบนซิ้งค์">
   <meta property="og:description" content="ล้างออกไซด์ เพิ่มเงา รองรับซิ้งค์ฉีด ใช้งาน 70–80°C 2–3 นาที พร้อมก่อนชุบ">
   <meta property="og:url" content="https://www.baumechemical.com/products/polishing/zinc-electropolishing-solution.html">
-  <meta property="og:image" content="https://i.imgur.com/KmCDo7F.png">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image1-4.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
   "@type": "Product",
   "name": "ACITEK MZ-52 — จุ่มเงาบนซิ้งค์",
   "description": "น้ำยาจุ่มเงาสำหรับซิ้งค์/ซิ้งค์ฉีด: ล้างออกไซด์ เพิ่มความเงา รองรับซิ้งค์ฉีด ใช้งาน 70–80°C 2–3 นาที พร้อมก่อนชุบ",
-  "image": "https://i.imgur.com/KmCDo7F.png",
+  "image": "https://img5.pic.in.th/file/secure-sv1/image1-4.jpeg",
   "brand": {"@type":"Brand","name":"Baume Chemical"},
   "category": "Surface Preparation",
   "inLanguage": "th",
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/KmCDo7F.png"/>
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image1-4.jpeg"/>
 
   <style>
     :root{
@@ -100,7 +100,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://i.imgur.com/KmCDo7F.png') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
+    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://img5.pic.in.th/file/secure-sv1/image1-4.jpeg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
     .hero h1{margin:6px 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-chip{position:absolute;top:calc(var(--header-h) + 10px);left:16px;z-index:1;display:inline-flex;align-items:center;gap:6px;padding:8px 12px;border-radius:999px;font-weight:800;text-decoration:none;background:#fff;border:1px solid rgba(2,8,20,.08);color:#0f172a;box-shadow:var(--shadow-1)}
