--- a/products/polishing/brass-electropolishing-solution.html
+++ b/products/polishing/brass-electropolishing-solution.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="LASER B — น้ำยากัด/จุ่มเงาทองเหลือง">
   <meta property="og:description" content="คู่มือใช้งานแบบหน้างานจริง: อัตราส่วนผสม ขั้นตอนการจุ่ม การปรับเติม และทิปส์ได้ผิวทองเหลืองเงางามทนหมอง">
   <meta property="og:url" content="https://www.baumechemical.com/products/polishing/brass-electropolishing-solution.html">
-  <meta property="og:image" content="https://i.imgur.com/wEo6YIQ.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
   "@type": "Product",
   "name": "LASER B — Brass Brightening/Polishing",
   "description": "กรดสูตรพิเศษสำหรับกัด/จุ่มเงาทองเหลือง กำจัดออกไซด์ คราบแดง ให้ผิวเงาทนหมอง ปลอดควันไนตริก ใช้ได้ทั้งถังแขวนและถังกลิ้ง",
-  "image": "https://i.imgur.com/wEo6YIQ.jpeg",
+  "image": "https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg",
   "brand": {"@type":"Brand","name":"Baume Chemical"},
   "category": "Brass Polishing",
   "inLanguage": "th",
@@ -45,7 +45,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/wEo6YIQ.jpeg"/>
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg"/>
 
   <style>
     :root{
@@ -54,7 +54,7 @@
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
       --header-h:64px; --container:1200px;
-      --hero-url:url('https://i.imgur.com/wEo6YIQ.jpeg');
+      --hero-url:url('https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg');
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
@@ -344,7 +344,7 @@
             <li data-i18n-key="principle_b4">รองรับทองเหลืองหลายเกรด รวมถึงชิ้นงานมี Pb สูง</li>
           </ul>
           <figure style="margin:10px 0 0">
-            <img src="https://i.imgur.com/wEo6YIQ.jpeg" alt="ตัวอย่างพื้นผิวทองเหลืองเงาสูง" style="width:100%;border-radius:12px;box-shadow:var(--shadow-1)">
+            <img src="https://img5.pic.in.th/file/secure-sv1/image1-3.jpeg" alt="ตัวอย่างพื้นผิวทองเหลืองเงาสูง" style="width:100%;border-radius:12px;box-shadow:var(--shadow-1)">
           </figure>
         </div>
       </section>
